# esp-idf-rs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  build.rs  platformio.cargo.py  platformio.ini  rust-toolchain.toml  sdkconfig.debug
.cargo/: config.toml
components/clib/: clib.c
components/epdiy/: epd_driver.c  highlevel.c  render.c
components/epdiy/include/: epd_driver.h  epd_highlevel.h  epd_internals.h
epd-gfx/: Cargo.toml
epd-gfx-preview/: Cargo.toml
epd-gfx-preview/src/: main.rs  preview.rs  weather.rs
epd-gfx/src/: drawables.rs  drawing.rs  font.rs  icons.rs  lib.rs  weather.rs
epd-gfx/src/kvv/: Readme.md  mod.rs  response.html
epd-gfx/src/openmeteo/: config.rs  mod.rs  responses.rs
epd-gfx/src/weather_icons/: drawables.rs  icons.rs  mod.rs
esp/: .gitignore  Cargo.toml  Makefile  build.rs  platformio.ini  sdkconfig.debug  sdkconfig.defaults
esp/.cargo/: config.toml
esp/components/epdiy/: highlevel.c
esp/src/: epd.rs  lib.rs  wifi.rs
pio/: .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  build.rs  platformio.ini  root_bashrc  sdkconfig  sdkconfig.debug  sdkconfig.old
pio/components/clib/include/: CApi.h
pio/src/: epd.rs  firasans.rs  lib.rs  timer.rs  wifi.rs
src/: epd.rs  epd_highlevel.rs  lib.rs
