[package]
name = "esp-idf-rs"
edition = "2021"
version = "0.1.0"
authors = []
keywords = []
categories = []
autobins = true
autoexamples = true
autotests = true
autobenches = true
publish = true

[dependencies]
embedded-hal = "0.2.5"
esp-idf-hal = "0.33"
esp-idf-sys = "0.30"

#https://github.com/esp-rs/esp-idf-hal/issues/47
#[patch.crates-io]
#embuild = { git = 'https://github.com/ivmarkov/embuild' }

[dev-dependencies]

[build-dependencies]
bindgen = "0.58.1"

[target]

[features]

[patch]

[lib]
path = "src/lib.rs"
name = "esp_idf_rs"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
crate-type = ["staticlib"]
required-features = []

[profile]
[badges.maintenance]
status = "none"
