[package]
name = "epd-gfx-preview"
version = "0.1.0"
edition = "2021"
authors = ["Jens Pfeifle <jens@pfeifle.tech>"]

[dependencies]
epd-gfx = { path = "../epd-gfx" }
env_logger = "0.9"
log = "0.4"
pixels = "0.9.0"
winit = "0.26"
winit_input_helper = "0.11"
reqwest = {version = "0.11.9", features=["blocking"]}
#brtsky = {git= "https://github.com/jenspfeifle/brtsky", branch="espidf"}
brightsky = {path= "../brightsky-rs"}
serde_json="1"
anyhow = "1"
embedded-graphics = "0.7.1"
