[package]
name = "epd-gfx-preview"
version = "0.1.0"
edition = "2021"
authors = ["Jens Pfeifle <jens@pfeifle.tech>"]

[dependencies]
epd-gfx = { path = "../epd-gfx" }
env_logger = "0.9"
log = "0.4"
pixels = "0.9.0"
winit = "0.26"
winit_input_helper = "0.11"
serde = "^1.0"
serde_json="1"
serde_derive = "^1.0"
serde_repr = "0.1.7"
anyhow = "1"
embedded-graphics = "0.7.1"
chrono = "0.4.19"
urlencoding = "2.1.0"
bytes = "1.1.0"
ureq = "2.4.0"
