[package]
name = "epd-gfx"
version = "0.1.0"
edition = "2021"
authors = ["Jens Pfeifle <jens@pfeifle.tech>"]

[dependencies]
anyhow = "1"
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.3"
rusttype = "0.9.2" # FIXME: make optional?
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
serde_repr = "0.1.7"
