[package]
name = "esp"
edition = "2021"
version = "0.1.0"
authors = []
keywords = []
categories = []
autobins = true
autoexamples = true
autotests = true
autobenches = true
publish = true

[dependencies]
anyhow = {version = "1"}
bytes = "1.1.0"
log = { version = "0.4", default-features = false }
serde_json="1"
#embedded-svc ={version=  "0.17", features = ["experimental", "alloc"]}
esp-idf-svc ={version=  "0.41", features = ["experimental", "alloc"]}
embedded-graphics = "0.7"
epd-gfx = {path="../epd-gfx/"}


# TODO: https://github.com/ivmarkov/rust-esp32-std-demo/commit/a39e0892880567b6e955f6f3acb1816259d1d9b1

[dev-dependencies]

[build-dependencies]
bindgen = "0.58"
anyhow = "1"

[target]

[features]

[patch]

[lib]
path = "src/lib.rs"
name = "esp"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
crate-type = ["staticlib"]
required-features = []

[profile]
[badges.maintenance]
status = "none"
