[package]
name = "esp-idf-rs"
edition = "2021"
version = "0.1.0"
authors = []

[dependencies]
anyhow = {version = "1"}
bytes = "1.1.0"
embedded-graphics = "0.7.1"
embedded-svc = "0.17.2"
epd-gfx = {path="../epd-gfx/"}
esp-idf-svc ={version=  "0.37.2", features = ["experimental", "alloc"]}
esp-idf-sys = "0.30"
log = { version = "0.4", default-features = false }
serde_json="1"

[dev-dependencies]

[build-dependencies]
bindgen = "0.58.1"

[target]

[features]

#[patch.crates-io]
# https://github.com/esp-rs/esp-idf-hal/issues/47
#embuild = { path = './embuild' }


[lib]
path = "src/lib.rs"
name = "esp_idf_rs"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
crate-type = ["staticlib"]
required-features = []

[profile]
[badges.maintenance]
status = "none"
